# TasteMap

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  collections.py  imports.py  places.py  router.py  social.py
backend/app/core/: config.py  database.py  errors.py  redis.py  security.py
backend/app/integrations/: base.py  fake_parser.py  google_maps_parser.py  google_places_client.py  instagram_parser.py  llm_client.py  registry.py  threads_parser.py  x_parser.py  youtube_parser.py
backend/app/models/: __init__.py  collection.py  follow.py  import_candidate.py  import_job.py  mixins.py  place.py  recommendation.py  user.py
backend/app/repositories/: collection_repository.py  import_repository.py  place_repository.py  recommendation_repository.py  social_repository.py  user_repository.py
backend/app/schemas/: auth.py  collection.py  import_job.py  place.py  recommendation.py  social.py
backend/app/services/: auth_service.py  collection_service.py  extraction_service.py  import_service.py  parser_service.py  place_matching_service.py  place_service.py  social_service.py
backend/app/utils/: normalize.py
backend/app/workers/: celery_app.py  import_worker.py
backend/scripts/: preview_urls.py  run_pipeline.py  show_llm_prompt.py
backend/tests/: test_import_dedup.py  test_threads_parser.py
docs/: design-brief.md  (+2 more)
(+81 files in other folders)
