[project]
name = "tastemap-backend"
version = "0.1.0"
description = "TasteMap backend — cross-platform food recommendation import, aligned to google_place_id."
requires-python = ">=3.11"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # db
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    # cache + queue
    "redis>=5.2",
    "celery>=5.4",
    # auth
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.x's bcrypt backend self-test breaks on bcrypt>=4.1; pin to 4.0.x.
    "bcrypt>=4.0,<4.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.2",
    # external clients (shared by every platform parser)
    "httpx>=0.28",
    "anthropic>=0.40",
    # parsing helpers the platform owners may use
    "beautifulsoup4>=4.12",
    "youtube-transcript-api>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
